Updating the habit value functionality, set up habit completion history page as well as the schema, added charts to visualize progress

--- a/styles/app.css
+++ b/styles/app.css
@@ -75,3 +75,8 @@ div.epr-skin-tones {
 input[type="color" i]::-webkit-color-swatch {
   border: none !important;
 }
+
+.echarts-for-react {
+  width: 200px;
+  height: 200px
+}
